trying to fix an image overflow issue

--- a/main.scss
+++ b/main.scss
@@ -57,12 +57,16 @@ nav {
   p {
     @extend %text-5;
   }
+  img {
+    visibility: hidden;
+  }
   .img {
     content: url("assets/image-hero-mobile.png");
     width: 335px;
     height: 320px;
     display: block;
     margin: 0 auto;
+    margin-top: 40px;
   }
 }
 .content {
@@ -106,7 +110,8 @@ nav {
   img {
     width: 56px;
     position: absolute;
-    top: -20px;
+    top: -30px;
+    left: 30px;
   }
   h3 {
     @extend %text-4;
@@ -132,51 +137,60 @@ footer {
   }
 }
 @media (min-width: 718px) {
-  body {
-    nav {
-      padding: 24px 44px;
+  .img {
+    visibility: hidden;
+  }
+  img {
+    visibility: visible;
+  }
+  nav {
+    padding: 16px 124px;
+  }
+  .hero {
+    flex-direction: row;
+    position: relative;
+    height: 528px;
+    justify-content: space-between;
+    padding-left: 44px;
+    img {
+      visibility: visible;
+      position: absolute;
+      width: 937px;
+      top: -150px;
+      right: -200px;
+      overflow: hidden;
     }
-    .hero {
-      flex-direction: row;
-      position: relative;
-      height: 528px;
-      justify-content: space-between;
-      padding-left: 44px;
-      .img {
-        content: url("assets/image-hero-desktop@2x.png");
-        position: absolute;
-        top: -150px;
-        right: -300px;
-        width: 740px;
-        height: 640px;
-      }
+  }
+  .content {
+    display: flex;
+    height: auto;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: flex-start;
+    h2 {
+      filter: drop-shadow(0 0 0.75rem grey);
+      align-self: flex-end;
+      width: 350px;
+      height: 300px;
     }
-    .content {
-      display: flex;
-      height: auto;
-      flex-direction: row;
-      flex-wrap: wrap;
-      align-content: flex-start;
-      h2 {
-        filter: drop-shadow(0 0 0.75rem grey);
-        align-self: flex-end;
-        width: 350px;
-        height: 300px;
-      }
-      .card {
-        margin-top: 32px;
-        width: 350px;
-      }
+    .card {
+      margin-top: 32px;
+      width: 350px;
     }
   }
 }
+
 @media (min-width: 1024px) {
+  nav {
+  }
   .hero {
     margin-left: 80px;
-    height: 964px;
+    height: auto;
+    margin-bottom: 64px;
   }
-  #img {
-    width: 900px;
+  img {
+    max-width: 100%;
+    overflow: hidden;
     height: auto;
     top: -250px;
     right: -200px;
